--- a/index.html
+++ b/index.html
@@ -2,61 +2,134 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gadget Hub</title>
-    <link rel="stylesheet" type="text/css" href="../">
-    <script src="https://kit.fontawesome.com/840d3e83f7.js" crossorigin="anonymous"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100&display=swap');
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gadget Hub</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100&display=swap');
+  </style>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div>
-                <img src="../PreEntrega1+Aragon/img/Logo GH.jpg" alt="Logo GH">
-            </div>
-            <div>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="pages/PC.html">PC</a></li>
-                    <li><a href="pages/console.html">Console</a></li>
-                    <li><a href="pages/mobile.html">Mobile</a></li>
-                </ul>
-            </div>
-            <div>
-                <div>
-                    <button type="button">
-                        <i class="fa-solid fa-magnifying-glass icon-search"></i></button>
-                    <input type="text" placeholder="Search">
-                </div>
-                <button type="button"><i class="fa-solid fa-cart-shopping"></i></button>
-            </div>
-    
-        </nav>
-    
-    </header>
 
-    <main>
-        <div>
-            <h1>NEW RAZER BLADE 15</h1>
-            <h3>PORTABLE. POWERFUL. PERFECTION.</h3>
-            <span>Learn more ></span>
-            <span>Buy ></span>
-            <div>
-                <img src="../PreEntrega1+Aragon/img/razer_blade_15.jpeg" />
-            </div>
+  <header class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark" style="background-color: #000000;">
+    <nav class="container-fluid">
+      <img src="img/Logo_GH-removebg-preview.png" alt="Logo GH" width="50" height="50">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">PC</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">CONSOLE</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">MOBILE</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+            style="background-color: #000000;">
+          <button class="btn btn-light" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+  </header>
+
+
+
+  <main>
+    <section id="carouselExampleCaptions" class="carousel slide carousel-container">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/razer_blade_15-2.jpeg" class="d-block w-100 carousel-item-img" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>NEW RAZER BLADE 15</h5>
+            <p>PORTABLE. POWERFUL. PERFECTION.</p>
+          </div>
         </div>
-    </main>
+        <div class="carousel-item">
+          <img src="img/razer_blade_15-1.jpeg" class="d-block w-100 carousel-item-img" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>NEW RAZER BLADE 16</h5>
+            <p>PORTABLE. POWERFUL. PERFECTION.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/razer_blade_15.jpeg" class="d-block w-100 carousel-item-img" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>NEW RAZER BLADE 18</h5>
+            <p>PORTABLE. POWERFUL. PERFECTION.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </section>
 
-    <footer">
-        <span>Copyright © 2023 Gadget Hub C.A All rights reserved.</span>
-        <a href="../PreEntrega1+Aragon/pages/contactus.html"></a>
+    <section class="container d-flex w-100 mt-5 mb-5 gap-3">
+      <div class="card">
+        <img src="img/laptop.jpg" class="card-img-top group-card-img" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/razer-new.jpeg" class="card-img-top group-card-img" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        </div>
+      </div>
+      <div class="card">
+        <img src="img/accesorios.jpeg" class="card-img-top group-card-img" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+
+  <footer">
+    <span>Copyright © 2023 Gadget Hub C.A All rights reserved.</span>
+    <a href="../PreEntrega1+Aragon/pages/contactus.html"></a>
     </footer>
 
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
