--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
+  <script src="https://kit.fontawesome.com/840d3e83f7.js" crossorigin="anonymous"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100&display=swap');
   </style>
@@ -95,30 +95,91 @@
       </button>
     </section>
 
-    <section class="container d-flex w-100 mt-5 mb-5 gap-3">
-      <div class="card">
-        <img src="img/laptop.jpg" class="card-img-top group-card-img" alt="...">
+    <section class=" mt-5 mb-5 row justify-content-center gap-3">
+      <div class="card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
+        <img src="img/pc.jpeg" class="card-img-top group-card-img" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
         </div>
       </div>
-      <div class="card">
+      <div class="card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
         <img src="img/razer-new.jpeg" class="card-img-top group-card-img" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
+            <a href="#" class="btn btn-dark">Go somewhere</a>
         </div>
       </div>
-      <div class="card">
-        <img src="img/accesorios.jpeg" class="card-img-top group-card-img" alt="...">
+      <div class="card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
+        <img src="img/iphone.png" class="card-img-top group-card-img" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
+            <a href="#" class="btn btn-dark"">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
+        <img src="img/airpods.png" class="card-img-top group-card-img" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+            <a href="#" class="btn btn-dark"">Go somewhere</a>
         </div>
       </div>
     </section>
   </main>
+
+  <article class="articleContactUs">
+    <h3 class="h3ContactUs">Contact</h3>
+
+    <div class="divContact">
+        <div class="divBase divDirection">
+            <i class="fa-solid fa-location-dot"></i>
+            <p>Prebo. Valencia Estado Carabobo</p>
+        </div>
+
+        <div class="divBase divEmail">
+            <i class="fa-solid fa-at"></i>
+            <p>gadgethub@gmail.com</p>
+        </div>
+
+        <div class="divBase divNumber">
+            <i class="fa-solid fa-phone"></i>
+            <p>0424555555</p>
+        </div>
+
+        <div class="divBase divUrl">
+            <i class="fa-solid fa-globe"></i>
+            <p>www.gadgethub.com</p>
+        </div>
+    </div>
+</article>
+
+
+<article class="articleGetInTouch">
+<div class="divGetInTouch">
+    <h3 class="h3GetInTouch">Get in touch</h3>
+    <form class="formGetInTouch">
+        <label class="labelFormGetInTouch">Feel free to drop us a line below!</label>
+        <input type="text" placeholder="Name">
+        <input type="email" placeholder="Email">
+        <textarea class="formTextarea" placeholder="Message"></textarea>
+        <button>Send</button>
+    </form>
+</div>
+</article>
+
+</section>
+
+<aside class="asideWhatsapp">
+<botton class="bottonWhatsapp">
+<a href="https://www.whatsapp.com/" target="_blank">
+    <img class="imgLogoWhatsapp" src="../img/logo de whatsapp.jpeg"/>
+</a>
+</botton>
+</aside>
 
 
   <footer">
