--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+          <a href="#" class="btn btn-dark">Go somewhere</a>
         </div>
       </div>
       <div class="card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
@@ -109,7 +109,7 @@
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-            <a href="#" class="btn btn-dark">Go somewhere</a>
+          <a href="#" class="btn btn-dark">Go somewhere</a>
         </div>
       </div>
       <div class="card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
@@ -117,80 +117,89 @@
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-            <a href="#" class="btn btn-dark"">Go somewhere</a>
+          <a href="#" class="btn btn-dark"">Go somewhere</a>
         </div>
       </div>
-      <div class="card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
-        <img src="img/airpods.png" class="card-img-top group-card-img" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-            <a href="#" class="btn btn-dark"">Go somewhere</a>
+      <div class=" card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
+            <img src="img/airpods.png" class="card-img-top group-card-img" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                content.</p>
+              <a href="#" class="btn btn-dark"">Go somewhere</a>
         </div>
       </div>
     </section>
+
+    <form class="row g-3 needs-validation bg-light justify-content-center text-align-center px-5" novalidate>
+      <div class="col-md-12">
+        <label for="validationCustom01" class="form-label">First name</label>
+        <input type="text" class="form-control" id="validationCustom01" placeholder="Michelle" required>
+        <div class="valid-feedback">
+          Looks good!
+        </div>
+      </div>
+      <div class="col-md-12">
+        <label for="validationCustom02" class="form-label">Last name</label>
+        <input type="text" class="form-control" id="validationCustom02" placeholder="Aragon" required>
+        <div class="valid-feedback">
+          Looks good!
+        </div>
+      </div>
+      <div class="col-md-12">
+        <label for="validationCustomUsername" class="form-label">Username</label>
+        <div class="input-group has-validation">
+          <span class="input-group-text" id="inputGroupPrepend">@</span>
+          <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+          <div class="invalid-feedback">
+            Please choose a username.
+          </div>
+        </div>
+      </div>
+      <div class="col-md-12 mb-5">
+        <button class="btn text-white"  style="background-color: #f54895;" type="submit">Submit form</button>
+      </div>
+    </form>
+    
   </main>
 
-  <article class="articleContactUs">
-    <h3 class="h3ContactUs">Contact</h3>
+    <aside class="asideWhatsapp">
+      <botton class="bottonWhatsapp">
+        <a href="https://www.whatsapp.com/" target="_blank">
+          <img src="img/logo de whatsapp.jpeg" class="imgLogoWhatsapp"/>
+        </a>
+      </botton>
+    </aside>
 
-    <div class="divContact">
-        <div class="divBase divDirection">
+
+    <footer">
+
+      <article>
+        <h3>Contact</h3>
+        <div>
+          <div>
             <i class="fa-solid fa-location-dot"></i>
-            <p>Prebo. Valencia Estado Carabobo</p>
-        </div>
-
-        <div class="divBase divEmail">
+          </div>
+  
+          <div>
             <i class="fa-solid fa-at"></i>
-            <p>gadgethub@gmail.com</p>
-        </div>
-
-        <div class="divBase divNumber">
+          </div>
+  
+          <div>
             <i class="fa-solid fa-phone"></i>
-            <p>0424555555</p>
-        </div>
-
-        <div class="divBase divUrl">
+          </div>
+  
+          <div>
             <i class="fa-solid fa-globe"></i>
-            <p>www.gadgethub.com</p>
+          </div>
         </div>
-    </div>
-</article>
+        <span>Copyright © 2023 Gadget Hub C.A All rights reserved.</span>
+        </article>
+      </footer>
 
 
-<article class="articleGetInTouch">
-<div class="divGetInTouch">
-    <h3 class="h3GetInTouch">Get in touch</h3>
-    <form class="formGetInTouch">
-        <label class="labelFormGetInTouch">Feel free to drop us a line below!</label>
-        <input type="text" placeholder="Name">
-        <input type="email" placeholder="Email">
-        <textarea class="formTextarea" placeholder="Message"></textarea>
-        <button>Send</button>
-    </form>
-</div>
-</article>
-
-</section>
-
-<aside class="asideWhatsapp">
-<botton class="bottonWhatsapp">
-<a href="https://www.whatsapp.com/" target="_blank">
-    <img class="imgLogoWhatsapp" src="../img/logo de whatsapp.jpeg"/>
-</a>
-</botton>
-</aside>
-
-
-  <footer">
-    <span>Copyright © 2023 Gadget Hub C.A All rights reserved.</span>
-    <a href="../PreEntrega1+Aragon/pages/contactus.html"></a>
-    </footer>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
