foter y aside agregados

--- a/index.html
+++ b/index.html
@@ -165,36 +165,31 @@
     <aside class="asideWhatsapp">
       <botton class="bottonWhatsapp">
         <a href="https://www.whatsapp.com/" target="_blank">
-          <img src="img/logo de whatsapp.jpeg" class="imgLogoWhatsapp"/>
+          <img src="img/logo_de_whatsapp-removebg-preview.png" class="imgLogoWhatsapp"/>
         </a>
       </botton>
     </aside>
 
 
-    <footer">
-
-      <article>
-        <h3>Contact</h3>
-        <div>
-          <div>
-            <i class="fa-solid fa-location-dot"></i>
-          </div>
+    <footer class="d-flex justify-content-center">
+      <article class="mt-4 mb-4">
+        <div class=" d-flex justify-content-evenly mb-2">
+          <a href="https://www.linkedin.com/" target="_blank">
+            <i class="fa-brands fa-linkedin fa-2xl" style="color: #000000;"></i>
+          </a>
   
-          <div>
-            <i class="fa-solid fa-at"></i>
-          </div>
+          <a href="https://www.instagram.com/" target="_blank">
+            <i class="fa-brands fa-instagram fa-2xl" style="color: #000000;"></i>
+          </a>
   
-          <div>
-            <i class="fa-solid fa-phone"></i>
-          </div>
-  
-          <div>
-            <i class="fa-solid fa-globe"></i>
-          </div>
+          <a href="https://www.facebook.com/" target="_blank">
+            <i class="fa-brands fa-square-facebook fa-2xl" style="color: #000000;"></i>
+          </a>
         </div>
-        <span>Copyright © 2023 Gadget Hub C.A All rights reserved.</span>
+        <div>Copyright © 2023 Gadget Hub C.A All rights reserved.</div>
         </article>
       </footer>
+
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
