--- a/index.html
+++ b/index.html
@@ -24,18 +24,18 @@
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <div class="collapse navbar-collapse flex-grow-0" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+          <li class="nav-item me-5">
             <a class="nav-link active" aria-current="page" href="#">HOME</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item me-5">
             <a class="nav-link disabled">PC</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item me-5">
             <a class="nav-link disabled">CONSOLE</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item me-5">
             <a class="nav-link disabled">MOBILE</a>
           </li>
         </ul>
