--- a/pc.html
+++ b/pc.html
@@ -27,10 +27,10 @@
       <div class="collapse navbar-collapse flex-grow-0" id="navbarTogglerDemo02">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item me-5">
-            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            <a class="nav-link " aria-current="page" href="index.html">HOME</a>
           </li>
           <li class="nav-item me-5">
-            <a class="nav-link active" aria-current="page" href="pc.html">PC</a>
+            <a class="nav-link active">PC</a>
           </li>
           <li class="nav-item me-5">
             <a class="nav-link disabled">CONSOLE</a>
@@ -51,53 +51,18 @@
 
 
   <main>
-    <section id="carouselExampleCaptions" class="carousel slide carousel-container">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-          aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-          aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-          aria-label="Slide 3"></button>
-      </div>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="img/razer_blade_15-2.jpeg" class="d-block w-100 carousel-item-img" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>NEW RAZER BLADE 15</h5>
-            <p>PORTABLE. POWERFUL. PERFECTION.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="img/razer_blade_15-1.jpeg" class="d-block w-100 carousel-item-img" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>NEW RAZER BLADE 16</h5>
-            <p>PORTABLE. POWERFUL. PERFECTION.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="img/razer_blade_15.jpeg" class="d-block w-100 carousel-item-img" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>NEW RAZER BLADE 18</h5>
-            <p>PORTABLE. POWERFUL. PERFECTION.</p>
-          </div>
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </section>
 
-    <section class=" mt-5 mb-5 row justify-content-center gap-3">
+    <section class=" mt-5 mb-5 pt-5 row justify-content-center gap-3">
       <div class="card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
-        <img src="img/pc.jpeg" class="card-img-top group-card-img" alt="...">
+        <img src="img/Razer-Products-OGimage-1200x630.jpeg" class="card-img-top group-card-img" alt="...">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-dark">Go somewhere</a>
+        </div>
+      </div>
+      <div class="card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
+        <img src="img/image-header.jpeg" class="card-img-top group-card-img" alt="...">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
@@ -109,19 +74,11 @@
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-          <a href="#" class="btn btn-dark">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
-        <img src="img/iphone.png" class="card-img-top group-card-img" alt="...">
-        <div class="card-body">
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
           <a href="#" class="btn btn-dark"">Go somewhere</a>
         </div>
       </div>
       <div class=" card card border-0 px-3 col-lg-4 col-md-6 col-sm-12">
-            <img src="img/airpods.png" class="card-img-top group-card-img" alt="...">
+            <img src="img/pc.jpeg" class="card-img-top group-card-img" alt="...">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
@@ -129,46 +86,9 @@
         </div>
       </div>
     </section>
-
-    <form class="row g-3 needs-validation bg-light justify-content-center text-align-center px-5" novalidate>
-      <div class="col-md-12">
-        <label for="validationCustom01" class="form-label">First name</label>
-        <input type="text" class="form-control" id="validationCustom01" placeholder="Michelle" required>
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-      </div>
-      <div class="col-md-12">
-        <label for="validationCustom02" class="form-label">Last name</label>
-        <input type="text" class="form-control" id="validationCustom02" placeholder="Aragon" required>
-        <div class="valid-feedback">
-          Looks good!
-        </div>
-      </div>
-      <div class="col-md-12">
-        <label for="validationCustomUsername" class="form-label">Username</label>
-        <div class="input-group has-validation">
-          <span class="input-group-text" id="inputGroupPrepend">@</span>
-          <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-          <div class="invalid-feedback">
-            Please choose a username.
-          </div>
-        </div>
-      </div>
-      <div class="col-md-12 mb-5">
-        <button class="btn text-white"  style="background-color: #f54895;" type="submit">Submit form</button>
-      </div>
-    </form>
     
   </main>
 
-    <aside class="asideWhatsapp">
-      <botton class="bottonWhatsapp">
-        <a href="https://www.whatsapp.com/" target="_blank">
-          <img src="img/logo_de_whatsapp-removebg-preview.png" class="imgLogoWhatsapp"/>
-        </a>
-      </botton>
-    </aside>
 
 
     <footer class="d-flex justify-content-center">
